--- a/products.html
+++ b/products.html
@@ -28,7 +28,7 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="products.html">Productos</a></li>
         <li><a href="sale.html">Ventas</a></li>
-        <li><a href="">Configuración</a></li>
+        <li><a href="configuration.html">Configuración</a></li>
       </ul>
     </div>
   </nav>
